# fisique-bridge

./: .gitignore  README.md  build_icons.py  fisique-bridge.spec  main.py  pyproject.toml
.github/workflows/: build.yml
bridge/: api.py  app.py  cli.py  config.py  device.py  main.py  server.py  service.py  sync.py  tray.py  ui.py
